--- a/_posts/2020-11-18-no-design.md
+++ b/_posts/2020-11-18-no-design.md
@@ -2,6 +2,7 @@
 layout: post
 title: No design
 description: Where I talk about the reasons behind the simple design of my blog
+image: no-design
 ---
 
 As I [mentioned a couple of days ago](/2020/11/15/just-write), I&rsquo;ve started blogging again. This meant I had to have a working website, and that website required some level of design.
